[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Art/Character Sprites/enemy.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 15, 32 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 96.0

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 20, 10 )

[node name="Enemy" type="KinematicBody2D" groups=[
"enemies",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
hp = 100
Enemy_Sprite = null

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="Detection" type="Area2D" parent="." index="2"]

visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection" index="0"]

shape = SubResource( 2 )

[node name="JumpDetect" type="Area2D" parent="." index="3"]

position = Vector2( 15, 0 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpDetect" index="0"]

position = Vector2( 0, 15 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]

[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited"]

[connection signal="body_entered" from="JumpDetect" to="." method="_on_Area2D_body_entered"]


